--- a/templates/contact_feedback.html
+++ b/templates/contact_feedback.html
@@ -39,8 +39,8 @@
             <label for="user_name">User Name:</label><br>
             <input type="text" name="user_name" id="user_name" required><br><br>
 
-            <label for="email">E-Mail:</label><br>
-            <input type="text" name="email" id="email"><br><br>
+            <label for="user_email">E-Mail:</label><br>
+            <input type="text" name="user_email" id="user_email"><br><br>
 
             <label for="movie_name">Movie Name:</label><br>
             <input type="text" name="movie_name" id="movie_name" required><br><br>
@@ -52,4 +52,6 @@
         </form>
     </div>
 </div>
+
+
 {% endblock %}
